# readyreads

./: .gitignore  pyproject.toml
design_handoff_ezlibby/: README.md  data.jsx  dirD.desktop.jsx  ezlibby mobile (D).html  mobileD.jsx
docs/: index.html  manifest.webmanifest  service-worker.js  styles.css
docs/js/: app.js  goodreads.js  overdrive.js  render.js  sort.js  store.js
docs/plans/: 2026-03-10-beta-quality.md
ezlibby/: __init__.py  cache.py  display.py  goodreads.py  gui.py  main.py  overdrive.py
plans/: 2026-03-10-beta-quality.md
readyreads/: __init__.py  cache.py  display.py  goodreads.py  gui.py  html_report.py  main.py  overdrive.py
scripts/: check_cors.py  preview_report.py
tests/: test_goodreads_rating.py  test_html_report.py  test_searcher_rating.py  test_sort.py  test_table.py
tests/web/: goodreads.test.js  overdrive.test.js  sort.test.js  store.test.js
worker/: README.md  goodreads-proxy.js
