[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ezlibby"
version = "0.1.0"
description = "Match your Goodreads want-to-read list with your library's Libby collection"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "feedparser>=6.0.0",
    "rich>=13.0.0",
]

[project.scripts]
ezlibby = "ezlibby.main:main"

[tool.hatch.build.targets.wheel]
packages = ["ezlibby"]
