[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "readyreads"
version = "0.1.0"
description = "Match your Goodreads want-to-read list with your library's Libby collection"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "feedparser>=6.0.0",
    "rich>=13.0.0",
]

[project.scripts]
readyreads = "readyreads.main:main"

[tool.hatch.build.targets.wheel]
packages = ["readyreads"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Embedded CSS/HTML asset strings (font URL, noise data-URI) can't be wrapped.
"readyreads/html_report.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
